<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taint File Transfer App</string>
    <string name="start">Start</string>
    <string name="tfservice">Taint File Service</string>
    <string name="download">Download</string>
    <string name="localInfo">Local Info</string>
    <string name="severAddress">localhost</string>
    <string name="stop">Stop</string>
    <string name="serverPort">9999</string>
    <string name="refresh">Refresh</string>
    <string name="downloadFile">Clean.txt</string>
    <string name="serverFiles">Press Refresh</string>
    <string name="clientFiles">Press Refresh</string>
    <string name="availableList">Available For Download</string>
    <string name="downloadedList">Downloaded Files</string>
    <string name="remoteInfo">Remote Info</string>
    <string name="update">Update</string>
    <string name="myAddress">My IP Address</string>
    <string name="myPort">9999</string>
    <string name="allowTaint">Allow Taint</string>
    <string name="serverInfo">Server</string>
    <string name="allow">Allow</string>
    <string name="block">Block</string>

</resources>
